Fix indicator alignment if only 1 item exists.

--- a/src/nonogram/nonogram.css
+++ b/src/nonogram/nonogram.css
@@ -18,6 +18,7 @@
 .nonogram-indicator.col {
   border-left: 1px solid transparent;
   flex-direction: column;
+  justify-content: flex-end;
 }
 .nonogram-indicator.row {
   border-top: 1px solid transparent;
